--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,6 @@ jobs:
 
       - name: Create deployment archive
         run: |
-          cd frontend
           tar --exclude='node_modules' \
               --exclude='.next' \
               --exclude='.git' \
@@ -26,7 +25,7 @@ jobs:
               --exclude='logs' \
               --exclude='*.log' \
               --exclude='*.tar.gz' \
-              -czf ../frontend-deploy.tar.gz .
+              -czf frontend-deploy.tar.gz .
 
       - name: Copy frontend to EC2
         uses: appleboy/scp-action@v0.1.7
