--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,7 @@ name: Deploy Frontend (Store) to EC2
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
 
 jobs:
   deploy:
@@ -13,79 +12,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Debug directory structure
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Directory contents:"
-          ls -la
-          if [ -d "frontend" ]; then
-            echo "frontend directory exists"
-            ls -la frontend/ | head -20
-          else
-            echo "frontend directory does NOT exist"
-          fi
-
-      - name: Create deployment archive
-        run: |
-          if [ -d "frontend" ]; then
-            # Repository root contains frontend/ subdirectory
-            cd frontend
-            tar --exclude='node_modules' \
-                --exclude='.next' \
-                --exclude='.git' \
-                --exclude='.github' \
-                --exclude='coverage' \
-                --exclude='build' \
-                --exclude='out' \
-                --exclude='logs' \
-                --exclude='*.log' \
-                --exclude='*.tar.gz' \
-                --exclude='.yarn' \
-                --exclude='yarn-error.log' \
-                --exclude='npm-debug.log' \
-                --warning=no-file-changed \
-                -czf ../frontend-deploy.tar.gz . || true
-          else
-            # Repository root IS the frontend directory
-            tar --exclude='node_modules' \
-                --exclude='.next' \
-                --exclude='.git' \
-                --exclude='.github' \
-                --exclude='coverage' \
-                --exclude='build' \
-                --exclude='out' \
-                --exclude='logs' \
-                --exclude='*.log' \
-                --exclude='*.tar.gz' \
-                --exclude='.yarn' \
-                --exclude='yarn-error.log' \
-                --exclude='npm-debug.log' \
-                --warning=no-file-changed \
-                -czf frontend-deploy.tar.gz . || true
-          fi
-
       - name: Copy frontend to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          source: "frontend-deploy.tar.gz"
+          source: "."
           target: ${{ secrets.APP_PATH }}
           strip_components: 0
-          rm: true
-          overwrite: true
-
-      - name: Extract and cleanup on EC2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            cd ${{ secrets.APP_PATH }}
-            tar -xzf frontend-deploy.tar.gz
-            rm -f frontend-deploy.tar.gz
 
       - name: Build & restart frontend on EC2
         uses: appleboy/ssh-action@v1.0.3
@@ -95,23 +30,69 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             set -e
+
             cd ${{ secrets.APP_PATH }}
 
+            # Load shell environment (for yarn/node paths)
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+            [ -s "$HOME/.bashrc" ] && . "$HOME/.bashrc" || true
+            [ -s "$HOME/.profile" ] && . "$HOME/.profile" || true
 
+            # Ensure yarn is in PATH
+            if ! command -v yarn &> /dev/null; then
+              # Try common yarn locations
+              if [ -f "$HOME/.yarn/bin/yarn" ]; then
+                export PATH="$HOME/.yarn/bin:$PATH"
+              elif [ -f "/usr/local/bin/yarn" ]; then
+                export PATH="/usr/local/bin:$PATH"
+              fi
+            fi
+
+            echo "Installing dependencies..."
+            echo "Yarn path: $(which yarn || echo 'not found')"
             yarn install --immutable
+
+            # Clean old build
             rm -rf .next
 
+            # Load environment variables from .env.production if it exists
+            # This is required for Next.js build (e.g., STRIPE_SECRET_KEY)
             if [ -f ".env.production" ]; then
+              echo "Loading environment variables from .env.production..."
               set -a
               source .env.production
               set +a
+            else
+              echo "⚠️  Warning: .env.production not found. Build may fail if required env vars are missing."
             fi
 
+            # Set environment variables before build (Next.js reads these during build)
             export NODE_ENV=production
+
+            # Build application
+            echo "Building application..."
             yarn build
 
+            # Create PM2 ecosystem config file
+            APP_PATH="${{ secrets.APP_PATH }}"
+            
+            # Find yarn path (prefer corepack, fallback to yarn in PATH)
+            if [ -f "$HOME/.corepack/v1/yarn/4.6.0/yarn.js" ]; then
+              YARN_SCRIPT="node"
+              YARN_ARGS="$HOME/.corepack/v1/yarn/4.6.0/yarn.js start"
+            else
+              YARN_SCRIPT="yarn"
+              YARN_ARGS="start"
+            fi
+            
+            echo "Creating PM2 ecosystem.config.js (script: $YARN_SCRIPT, args: $YARN_ARGS)"
+            printf 'module.exports = {\n  apps: [\n    {\n      name: "store",\n      script: "%s",\n      args: "%s",\n      cwd: "%s",\n      env: {\n        NODE_ENV: "production",\n        NEXT_PUBLIC_MEDUSA_BACKEND_URL: "https://admin.zdacomm.com"\n      }\n    }\n  ]\n}\n' "$YARN_SCRIPT" "$YARN_ARGS" "$APP_PATH" > ecosystem.config.js
+
+            # Restart store via PM2 using ecosystem config
+            echo "Starting store with PM2..."
             pm2 delete store || true
-            pm2 start yarn --name store -- start
+            pm2 start ecosystem.config.js
             pm2 save
+
+            echo "✅ Store deployed successfully"
