--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy Frontend (Store) to EC2
+name: Deploy Store Frontend to EC2
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
 jobs:
   deploy:
@@ -10,89 +10,41 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Copy frontend to EC2
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          source: "."
-          target: ${{ secrets.APP_PATH }}
-          strip_components: 0
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Build & restart frontend on EC2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            set -e
+      - name: Rsync source to EC2 (NO TAR, NO OOM)
+        run: |
+          rsync -az --delete \
+            --exclude node_modules \
+            --exclude .next \
+            --exclude .git \
+            --exclude .github \
+            --exclude coverage \
+            --exclude logs \
+            --exclude "*.log" \
+            ./ \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:${{ secrets.APP_PATH }}
 
-            cd ${{ secrets.APP_PATH }}
+      - name: Build & restart app on EC2
+        run: |
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          set -e
+          cd ${{ secrets.APP_PATH }}
 
-            # Load shell environment (for yarn/node paths)
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-            [ -s "$HOME/.bashrc" ] && . "$HOME/.bashrc" || true
-            [ -s "$HOME/.profile" ] && . "$HOME/.profile" || true
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
 
-            # Ensure yarn is in PATH
-            if ! command -v yarn &> /dev/null; then
-              # Try common yarn locations
-              if [ -f "$HOME/.yarn/bin/yarn" ]; then
-                export PATH="$HOME/.yarn/bin:$PATH"
-              elif [ -f "/usr/local/bin/yarn" ]; then
-                export PATH="/usr/local/bin:$PATH"
-              fi
-            fi
+          yarn install --immutable
+          yarn build
 
-            echo "Installing dependencies..."
-            echo "Yarn path: $(which yarn || echo 'not found')"
-            yarn install --immutable
-
-            # Clean old build
-            rm -rf .next
-
-            # Load environment variables from .env.production if it exists
-            # This is required for Next.js build (e.g., STRIPE_SECRET_KEY)
-            if [ -f ".env.production" ]; then
-              echo "Loading environment variables from .env.production..."
-              set -a
-              source .env.production
-              set +a
-            else
-              echo "⚠️  Warning: .env.production not found. Build may fail if required env vars are missing."
-            fi
-
-            # Set environment variables before build (Next.js reads these during build)
-            export NODE_ENV=production
-
-            # Build application
-            echo "Building application..."
-            yarn build
-
-            # Create PM2 ecosystem config file
-            APP_PATH="${{ secrets.APP_PATH }}"
-            
-            # Find yarn path (prefer corepack, fallback to yarn in PATH)
-            if [ -f "$HOME/.corepack/v1/yarn/4.6.0/yarn.js" ]; then
-              YARN_SCRIPT="node"
-              YARN_ARGS="$HOME/.corepack/v1/yarn/4.6.0/yarn.js start"
-            else
-              YARN_SCRIPT="yarn"
-              YARN_ARGS="start"
-            fi
-            
-            echo "Creating PM2 ecosystem.config.js (script: $YARN_SCRIPT, args: $YARN_ARGS)"
-            printf 'module.exports = {\n  apps: [\n    {\n      name: "store",\n      script: "%s",\n      args: "%s",\n      cwd: "%s",\n      env: {\n        NODE_ENV: "production",\n        NEXT_PUBLIC_MEDUSA_BACKEND_URL: "https://admin.zdacomm.com"\n      }\n    }\n  ]\n}\n' "$YARN_SCRIPT" "$YARN_ARGS" "$APP_PATH" > ecosystem.config.js
-
-            # Restart store via PM2 using ecosystem config
-            echo "Starting store with PM2..."
-            pm2 delete store || true
-            pm2 start ecosystem.config.js
-            pm2 save
-
-            echo "✅ Store deployed successfully"
+          pm2 delete store || true
+          pm2 start yarn --name store -- start
+          pm2 save
+          EOF
