--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
+    "gsap": "^3.14.2",
     "i": "^0.3.7",
+    "lenis": "^1.3.17",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "next-share": "^0.27.0",
