--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^7.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-instantsearch": "^7.7.1",
