--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "stripe": "^14.8.0",
     "styled-components": "^6.1.15",
     "swiper": "^11.0.7",
+    "swr": "^2.2.5",
     "tailwind-merge": "^3.0.1",
     "use-shopping-cart": "^3.1.8"
   },
