--- a/package.json
+++ b/package.json
@@ -57,5 +57,11 @@
     "tsx": "^4.20.6",
     "typescript": "^5.4.3"
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.6.0",
+  "resolutions": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1"
+  }
 }
