--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,11 @@
 nodeLinker: node-modules
 
 yarnPath: .yarn/releases/yarn-4.6.0.cjs
+
+networkTimeout: 60000
+
+packageExtensions:
+  "use-shopping-cart@*":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
