--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,17 +69,30 @@ jobs:
             # Check disk space
             df -h
             
+            # Clean everything before install (critical for Yarn 4)
+            echo "🧹 Cleaning previous install artifacts..."
+            yarn cache clean || true
+            rm -rf node_modules .yarn/cache .yarn/install-state.gz || true
+            
+            # Verify Node version (must be 18+)
+            echo "🔍 Checking Node version..."
+            node -v
+            NODE_VERSION=$(node -v | cut -d'v' -f2 | cut -d'.' -f1)
+            if [ "$NODE_VERSION" -lt 18 ]; then
+              echo "❌ Node version must be 18 or higher. Current: $(node -v)"
+              exit 1
+            fi
+            
             # Install deps with retry logic
             echo "📦 Installing dependencies..."
-            yarn cache clean || true
-            
-            # Try install with extended timeout
-            if ! yarn install --network-timeout 120000; then
-              echo "⚠️ First install attempt failed, cleaning cache and retrying..."
+            if ! yarn install; then
+              echo "⚠️ First install attempt failed, performing deep clean and retrying..."
               yarn cache clean
-              rm -rf node_modules .yarn/cache || true
-              yarn install --network-timeout 120000 || {
+              rm -rf node_modules .yarn/cache .yarn/install-state.gz .pnp.* || true
+              yarn install || {
                 echo "❌ Install failed after retry"
+                echo "🔍 Running verbose install to diagnose..."
+                yarn install --verbose 2>&1 | tail -50
                 exit 1
               }
             fi
