--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-﻿# Database Configuration (Local PostgreSQL)
+# Database Configuration (Local PostgreSQL)
 # Format: postgresql://username:password@localhost:5432/database_name
 DATABASE_URL="postgresql://postgres:your_password@localhost:5432/zda_sanity?schema=public"
 
@@ -26,6 +26,20 @@ NEXTAUTH_SECRET="your_nextauth_secret_here"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="your_stripe_publishable_key"
 STRIPE_SECRET_KEY="your_stripe_secret_key"
 STRIPE_WEBHOOK_SECRET="your_stripe_webhook_secret"
+
+# Shippo Shipping Integration
+SHIPPO_API_TOKEN="your_shippo_api_token_here"
+SHIPPO_API_URL="https://api.goshippo.com"
+
+# Warehouse/Store Address (for shipping calculations)
+NEXT_PUBLIC_WAREHOUSE_NAME="Your Store Name"
+NEXT_PUBLIC_WAREHOUSE_STREET="123 Main Street"
+NEXT_PUBLIC_WAREHOUSE_CITY="Your City"
+NEXT_PUBLIC_WAREHOUSE_STATE="Your State"
+NEXT_PUBLIC_WAREHOUSE_ZIP="12345"
+NEXT_PUBLIC_WAREHOUSE_COUNTRY="US"
+NEXT_PUBLIC_WAREHOUSE_PHONE="+1234567890"
+NEXT_PUBLIC_WAREHOUSE_EMAIL="warehouse@example.com"
 
 # Node Environment
 NODE_ENV="development"
