return policy page

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,6 @@
 nodeLinker: node-modules
 
 yarnPath: .yarn/releases/yarn-4.6.0.cjs
+
+# Stream native build output (bcrypt, esbuild) so CI/SSH doesn't think job is stuck
+enableInlineBuilds: true
