--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,8 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          # Native rebuilds (bcrypt, esbuild) on small EC2 can take 10+ min; avoid SSH timeout
+          command_timeout: 30m
           script: |
             set -e
 
@@ -80,8 +82,8 @@ jobs:
             corepack enable
             corepack prepare yarn@4.6.0 --activate
 
-            # Install deps
-            yarn install --immutable
+            # Install deps: --inline-builds streams native build output so SSH doesn't timeout
+            yarn install --immutable --inline-builds
 
             # Clean build
             rm -rf .next
