--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,6 @@
+# Site URL (used for sitemap.xml, canonical URLs, and Open Graph)
+NEXT_PUBLIC_SITE_URL="https://www.zdacomm.com"
+
 # Database Configuration (Local PostgreSQL)
 # Format: postgresql://username:password@localhost:5432/database_name
 DATABASE_URL="postgresql://postgres:your_password@localhost:5432/zda_sanity?schema=public"
